# Phishing-Detection-ML

./: LICENSE  README.MD  check.ipynb  console_app.py  launch_api.py  pyproject.toml
models/: model_features_c.chkpt  text_model_c.chkpt
phish-detect/src/: api.py  main.py
