[tool.poetry]
package-mode = false
name = "phishing-detection"
license = "MIT"
version = "1.0.0"
description = ""
authors = ["Alexey Golgovskiy <alexeygolgovskiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.2"
tldextract = "^5.1.2"
numpy = "1.23.5"
joblib = "^1.4.2"
scikit-learn = "1.2.2"
lightgbm = "4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
